--- a/w11-assignment/sneakers.html
+++ b/w11-assignment/sneakers.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="header">
-      <a href="/" class="logo-container">
+      <a href="./index.html" class="logo-container">
         <img src="./assets/crown.svg" alt="" />
       </a>
       <div class="options">
@@ -26,15 +26,15 @@
       <div class="collection-page">
         <h1 class="title">Sneakers</h1>
         <div class="items">
-           <div class="collection-item">
-             <img class="image" src="https://i.ibb.co/0s3pdnc/adidas-nmd.png" />
-             <div class="collection-footer">
-               <span class="name">Adidas NMD</span>
-               <span class="price">220</span>
-             </div>
-             <button class="custom-button">Add to Cart</button>
-           </div>
-           <div class="collection-item">
+          <div class="collection-item">
+            <img class="image" src="https://i.ibb.co/0s3pdnc/adidas-nmd.png" />
+            <div class="collection-footer">
+              <span class="name">Adidas NMD</span>
+              <span class="price">220</span>
+            </div>
+            <button class="custom-button">Add to Cart</button>
+          </div>
+          <div class="collection-item">
             <img class="image" src="https://i.ibb.co/dJbG1cT/yeezy.png" />
             <div class="collection-footer">
               <span class="name">Adidas Yeezy</span>
@@ -43,7 +43,10 @@
             <button class="custom-button">Add to Card</button>
           </div>
           <div class="collection-item">
-            <img class="image" src="https://i.ibb.co/bPmVXyP/black-converse.png" />
+            <img
+              class="image"
+              src="https://i.ibb.co/bPmVXyP/black-converse.png"
+            />
             <div class="collection-footer">
               <span class="name">Black Converse</span>
               <span class="price">110</span>
@@ -51,7 +54,10 @@
             <button class="custom-button">Add to Cart</button>
           </div>
           <div class="collection-item">
-            <img class="image" src="https://i.ibb.co/1RcFPk0/white-nike-high-tops.png" />
+            <img
+              class="image"
+              src="https://i.ibb.co/1RcFPk0/white-nike-high-tops.png"
+            />
             <div class="collection-footer">
               <span class="name">Nike White AirForce</span>
               <span class="price">160</span>
@@ -91,7 +97,10 @@
             <button class="custom-button">Add to Cart</button>
           </div>
           <div class="collection-item">
-            <img class="image" src="https://i.ibb.co/X2VJP2W/blue-snapback.png" />
+            <img
+              class="image"
+              src="https://i.ibb.co/X2VJP2W/blue-snapback.png"
+            />
             <div class="collection-footer">
               <span class="name">Blue Snapback</span>
               <span class="price">16</span>
@@ -101,6 +110,5 @@
         </div>
       </div>
     </div>
-
   </body>
 </html>
