--- a/w11-assignment/hats.html
+++ b/w11-assignment/hats.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="header">
-      <a href="/" class="logo-container">
+      <a href="index.html" class="logo-container">
         <img src="./assets/crown.svg" alt="" />
       </a>
       <div class="options">
@@ -26,15 +26,15 @@
       <div class="collection-page">
         <h1 class="title">Hats</h1>
         <div class="items">
-           <div class="collection-item">
-             <img class="image" src="https://i.ibb.co/ZYW3VTp/brown-brim.png" />
-             <div class="collection-footer">
-               <span class="name">Brown Brim</span>
-               <span class="price">25</span>
-             </div>
-             <button class="custom-button">Add to Cart</button>
-           </div>
-           <div class="collection-item">
+          <div class="collection-item">
+            <img class="image" src="https://i.ibb.co/ZYW3VTp/brown-brim.png" />
+            <div class="collection-footer">
+              <span class="name">Brown Brim</span>
+              <span class="price">25</span>
+            </div>
+            <button class="custom-button">Add to Cart</button>
+          </div>
+          <div class="collection-item">
             <img class="image" src="https://i.ibb.co/ypkgK0X/blue-beanie.png" />
             <div class="collection-footer">
               <span class="name">Blue Beanie</span>
@@ -43,7 +43,10 @@
             <button class="custom-button">Add to Card</button>
           </div>
           <div class="collection-item">
-            <img class="image" src="https://i.ibb.co/QdJwgmp/brown-cowboy.png" />
+            <img
+              class="image"
+              src="https://i.ibb.co/QdJwgmp/brown-cowboy.png"
+            />
             <div class="collection-footer">
               <span class="name">Brown Cowboy</span>
               <span class="price">35</span>
@@ -59,7 +62,10 @@
             <button class="custom-button">Add to Cart</button>
           </div>
           <div class="collection-item">
-            <img class="image" src="https://i.ibb.co/YTjW3vF/green-beanie.png" />
+            <img
+              class="image"
+              src="https://i.ibb.co/YTjW3vF/green-beanie.png"
+            />
             <div class="collection-footer">
               <span class="name">Green Beanie</span>
               <span class="price">18</span>
@@ -67,7 +73,10 @@
             <button class="custom-button">Add to Cart</button>
           </div>
           <div class="collection-item">
-            <img class="image" src="https://i.ibb.co/rKBDvJX/palm-tree-cap.png" />
+            <img
+              class="image"
+              src="https://i.ibb.co/rKBDvJX/palm-tree-cap.png"
+            />
             <div class="collection-footer">
               <span class="name">Palm Tree</span>
               <span class="price">14</span>
@@ -91,7 +100,10 @@
             <button class="custom-button">Add to Cart</button>
           </div>
           <div class="collection-item">
-            <img class="image" src="https://i.ibb.co/X2VJP2W/blue-snapback.png" />
+            <img
+              class="image"
+              src="https://i.ibb.co/X2VJP2W/blue-snapback.png"
+            />
             <div class="collection-footer">
               <span class="name">Blue Snapback</span>
               <span class="price">16</span>
@@ -101,7 +113,5 @@
         </div>
       </div>
     </div>
-  
-  
   </body>
 </html>
