--- a/w11-assignment/jackets.html
+++ b/w11-assignment/jackets.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="header">
-      <a href="/" class="logo-container">
+      <a href="./index.html" class="logo-container">
         <img src="./assets/crown.svg" alt="" />
       </a>
       <div class="options">
@@ -26,16 +26,22 @@
       <div class="collection-page">
         <h1 class="title">Jackets</h1>
         <div class="items">
-           <div class="collection-item">
-             <img class="image" src="https://i.ibb.co/XzcwL5s/black-shearling.png" />
-             <div class="collection-footer">
-               <span class="name">Black Jean Shearling</span>
-               <span class="price">125</span>
-             </div>
-             <button class="custom-button">Add to Cart</button>
-           </div>
-           <div class="collection-item">
-            <img class="image" src="https://i.ibb.co/mJS6vz0/blue-jean-jacket.png" />
+          <div class="collection-item">
+            <img
+              class="image"
+              src="https://i.ibb.co/XzcwL5s/black-shearling.png"
+            />
+            <div class="collection-footer">
+              <span class="name">Black Jean Shearling</span>
+              <span class="price">125</span>
+            </div>
+            <button class="custom-button">Add to Cart</button>
+          </div>
+          <div class="collection-item">
+            <img
+              class="image"
+              src="https://i.ibb.co/mJS6vz0/blue-jean-jacket.png"
+            />
             <div class="collection-footer">
               <span class="name">Blue Jean Jacket</span>
               <span class="price">90</span>
@@ -43,7 +49,10 @@
             <button class="custom-button">Add to Card</button>
           </div>
           <div class="collection-item">
-            <img class="image" src="https://i.ibb.co/N71k1ML/grey-jean-jacket.png" />
+            <img
+              class="image"
+              src="https://i.ibb.co/N71k1ML/grey-jean-jacket.png"
+            />
             <div class="collection-footer">
               <span class="name">Grey Jean Jacket</span>
               <span class="price">90</span>
@@ -51,7 +60,10 @@
             <button class="custom-button">Add to Cart</button>
           </div>
           <div class="collection-item">
-            <img class="image" src="https://i.ibb.co/s96FpdP/brown-shearling.png" />
+            <img
+              class="image"
+              src="https://i.ibb.co/s96FpdP/brown-shearling.png"
+            />
             <div class="collection-footer">
               <span class="name">Brown Shearling</span>
               <span class="price">165</span>
@@ -59,7 +71,10 @@
             <button class="custom-button">Add to Cart</button>
           </div>
           <div class="collection-item">
-            <img class="image" src="https://i.ibb.co/M6hHc3F/brown-trench.png" />
+            <img
+              class="image"
+              src="https://i.ibb.co/M6hHc3F/brown-trench.png"
+            />
             <div class="collection-footer">
               <span class="name">Tan Trench</span>
               <span class="price">185</span>
@@ -69,6 +84,5 @@
         </div>
       </div>
     </div>
-  
   </body>
 </html>
