--- a/w11-assignment/mens.html
+++ b/w11-assignment/mens.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="header">
-      <a href="/" class="logo-container">
+      <a href="./index.html" class="logo-container">
         <img src="./assets/crown.svg" alt="" />
       </a>
       <div class="options">
@@ -22,21 +22,23 @@
       </div>
     </div>
 
-  
     <div class="shop-page">
       <div class="collection-page">
         <h1 class="title">Mens</h1>
         <div class="items">
-           <div class="collection-item">
-             <img class="image" src="https://i.ibb.co/xJS0T3Y/camo-vest.png" />
-             <div class="collection-footer">
-               <span class="name">Camo Down Vest</span>
-               <span class="price">325</span>
-             </div>
-             <button class="custom-button">Add to Cart</button>
-           </div>
-           <div class="collection-item">
-            <img class="image" src="https://i.ibb.co/qMQ75QZ/floral-shirt.png" />
+          <div class="collection-item">
+            <img class="image" src="https://i.ibb.co/xJS0T3Y/camo-vest.png" />
+            <div class="collection-footer">
+              <span class="name">Camo Down Vest</span>
+              <span class="price">325</span>
+            </div>
+            <button class="custom-button">Add to Cart</button>
+          </div>
+          <div class="collection-item">
+            <img
+              class="image"
+              src="https://i.ibb.co/qMQ75QZ/floral-shirt.png"
+            />
             <div class="collection-footer">
               <span class="name">Floral T-shirt</span>
               <span class="price">20</span>
@@ -60,7 +62,10 @@
             <button class="custom-button">Add to Cart</button>
           </div>
           <div class="collection-item">
-            <img class="image" src="https://i.ibb.co/VpW4x5t/roll-up-jean-shirt.png" />
+            <img
+              class="image"
+              src="https://i.ibb.co/VpW4x5t/roll-up-jean-shirt.png"
+            />
             <div class="collection-footer">
               <span class="name">Jean Long Sleeve</span>
               <span class="price">40</span>
@@ -68,7 +73,10 @@
             <button class="custom-button">Add to Cart</button>
           </div>
           <div class="collection-item">
-            <img class="image" src="https://i.ibb.co/mh3VM1f/polka-dot-shirt.png" />
+            <img
+              class="image"
+              src="https://i.ibb.co/mh3VM1f/polka-dot-shirt.png"
+            />
             <div class="collection-footer">
               <span class="name">Burgundy T-shirt</span>
               <span class="price">25</span>
