--- a/w11-assignment/overview.html
+++ b/w11-assignment/overview.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="header">
-      <a href="/" class="logo-container">
+      <a href="./index.html" class="logo-container">
         <img src="./assets/crown.svg" alt="" />
       </a>
       <div class="options">
@@ -28,7 +28,10 @@
           <h2 class="title">Hats</h2>
           <div class="preview">
             <div class="collection-item">
-              <img class="image" src="https://i.ibb.co/ZYW3VTp/brown-brim.png" />
+              <img
+                class="image"
+                src="https://i.ibb.co/ZYW3VTp/brown-brim.png"
+              />
               <div class="collection-footer">
                 <span class="name">Brown Brim</span>
                 <span class="price">25</span>
@@ -36,15 +39,21 @@
               <button class="custom-button">Add to Cart</button>
             </div>
             <div class="collection-item">
-            <img class="image" src="https://i.ibb.co/ypkgK0X/blue-beanie.png" />
-            <div class="collection-footer">
-              <span class="name">Blue Beanie</span>
-              <span class="price">18</span>
-            </div>
-            <button class="custom-button">Add to Card</button>
+              <img
+                class="image"
+                src="https://i.ibb.co/ypkgK0X/blue-beanie.png"
+              />
+              <div class="collection-footer">
+                <span class="name">Blue Beanie</span>
+                <span class="price">18</span>
+              </div>
+              <button class="custom-button">Add to Card</button>
             </div>
             <div class="collection-item">
-              <img class="image" src="https://i.ibb.co/QdJwgmp/brown-cowboy.png" />
+              <img
+                class="image"
+                src="https://i.ibb.co/QdJwgmp/brown-cowboy.png"
+              />
               <div class="collection-footer">
                 <span class="name">Brown Cowboy</span>
                 <span class="price">35</span>
@@ -62,10 +71,13 @@
           </div>
         </div>
         <div class="collection-preview">
-          <h1 class="title">Jackets</h1>  
+          <h1 class="title">Jackets</h1>
           <div class="preview">
             <div class="collection-item">
-              <img class="image" src="https://i.ibb.co/XzcwL5s/black-shearling.png" />
+              <img
+                class="image"
+                src="https://i.ibb.co/XzcwL5s/black-shearling.png"
+              />
               <div class="collection-footer">
                 <span class="name">Black Jean Shearling</span>
                 <span class="price">125</span>
@@ -73,36 +85,48 @@
               <button class="custom-button">Add to Cart</button>
             </div>
             <div class="collection-item">
-             <img class="image" src="https://i.ibb.co/mJS6vz0/blue-jean-jacket.png" />
-             <div class="collection-footer">
-               <span class="name">Blue Jean Jacket</span>
-               <span class="price">90</span>
-             </div>
-             <button class="custom-button">Add to Card</button>
-           </div>
-           <div class="collection-item">
-             <img class="image" src="https://i.ibb.co/N71k1ML/grey-jean-jacket.png" />
-             <div class="collection-footer">
-               <span class="name">Grey Jean Jacket</span>
-               <span class="price">90</span>
-             </div>
-             <button class="custom-button">Add to Cart</button>
-           </div>
-           <div class="collection-item">
-             <img class="image" src="https://i.ibb.co/s96FpdP/brown-shearling.png" />
-             <div class="collection-footer">
-               <span class="name">Brown Shearling</span>
-               <span class="price">165</span>
-             </div>
-             <button class="custom-button">Add to Cart</button>
-           </div>
+              <img
+                class="image"
+                src="https://i.ibb.co/mJS6vz0/blue-jean-jacket.png"
+              />
+              <div class="collection-footer">
+                <span class="name">Blue Jean Jacket</span>
+                <span class="price">90</span>
+              </div>
+              <button class="custom-button">Add to Card</button>
+            </div>
+            <div class="collection-item">
+              <img
+                class="image"
+                src="https://i.ibb.co/N71k1ML/grey-jean-jacket.png"
+              />
+              <div class="collection-footer">
+                <span class="name">Grey Jean Jacket</span>
+                <span class="price">90</span>
+              </div>
+              <button class="custom-button">Add to Cart</button>
+            </div>
+            <div class="collection-item">
+              <img
+                class="image"
+                src="https://i.ibb.co/s96FpdP/brown-shearling.png"
+              />
+              <div class="collection-footer">
+                <span class="name">Brown Shearling</span>
+                <span class="price">165</span>
+              </div>
+              <button class="custom-button">Add to Cart</button>
+            </div>
           </div>
         </div>
         <div class="collection-preview">
-          <h2 class="title">Sneakers</h2>  
+          <h2 class="title">Sneakers</h2>
           <div class="preview">
             <div class="collection-item">
-              <img class="image" src="https://i.ibb.co/0s3pdnc/adidas-nmd.png" />
+              <img
+                class="image"
+                src="https://i.ibb.co/0s3pdnc/adidas-nmd.png"
+              />
               <div class="collection-footer">
                 <span class="name">Adidas NMD</span>
                 <span class="price">220</span>
@@ -110,33 +134,39 @@
               <button class="custom-button">Add to Cart</button>
             </div>
             <div class="collection-item">
-             <img class="image" src="https://i.ibb.co/dJbG1cT/yeezy.png" />
-             <div class="collection-footer">
-               <span class="name">Adidas Yeezy</span>
-               <span class="price">280</span>
-             </div>
-             <button class="custom-button">Add to Card</button>
-           </div>
-           <div class="collection-item">
-             <img class="image" src="https://i.ibb.co/bPmVXyP/black-converse.png" />
-             <div class="collection-footer">
-               <span class="name">Black Converse</span>
-               <span class="price">110</span>
-             </div>
-             <button class="custom-button">Add to Cart</button>
-           </div>
-           <div class="collection-item">
-             <img class="image" src="https://i.ibb.co/1RcFPk0/white-nike-high-tops.png" />
-             <div class="collection-footer">
-               <span class="name">Nike White AirForce</span>
-               <span class="price">160</span>
-             </div>
-             <button class="custom-button">Add to Cart</button>
-           </div>
+              <img class="image" src="https://i.ibb.co/dJbG1cT/yeezy.png" />
+              <div class="collection-footer">
+                <span class="name">Adidas Yeezy</span>
+                <span class="price">280</span>
+              </div>
+              <button class="custom-button">Add to Card</button>
+            </div>
+            <div class="collection-item">
+              <img
+                class="image"
+                src="https://i.ibb.co/bPmVXyP/black-converse.png"
+              />
+              <div class="collection-footer">
+                <span class="name">Black Converse</span>
+                <span class="price">110</span>
+              </div>
+              <button class="custom-button">Add to Cart</button>
+            </div>
+            <div class="collection-item">
+              <img
+                class="image"
+                src="https://i.ibb.co/1RcFPk0/white-nike-high-tops.png"
+              />
+              <div class="collection-footer">
+                <span class="name">Nike White AirForce</span>
+                <span class="price">160</span>
+              </div>
+              <button class="custom-button">Add to Cart</button>
+            </div>
           </div>
         </div>
         <div class="collection-preview">
-          <h2 class="title">Womens</h2>  
+          <h2 class="title">Womens</h2>
           <div class="preview">
             <div class="collection-item">
               <img class="image" src="https://i.ibb.co/7CQVJNm/blue-tank.png" />
@@ -147,33 +177,42 @@
               <button class="custom-button">Add to Cart</button>
             </div>
             <div class="collection-item">
-             <img class="image" src="https://i.ibb.co/4W2DGKm/floral-blouse.png" />
-             <div class="collection-footer">
-               <span class="name">Floral Blouse</span>
-               <span class="price">20</span>
-             </div>
-             <button class="custom-button">Add to Card</button>
-           </div>
-           <div class="collection-item">
-             <img class="image" src="https://i.ibb.co/KV18Ysr/floral-skirt.png" />
-             <div class="collection-footer">
-               <span class="name">Floral Dress</span>
-               <span class="price">80</span>
-             </div>
-             <button class="custom-button">Add to Cart</button>
-           </div>
-           <div class="collection-item">
-             <img class="image" src="https://i.ibb.co/N3BN1bh/red-polka-dot-dress.png" />
-             <div class="collection-footer">
-               <span class="name">Red Dots Dress</span>
-               <span class="price">80</span>
-             </div>
-             <button class="custom-button">Add to Cart</button>
-           </div>
+              <img
+                class="image"
+                src="https://i.ibb.co/4W2DGKm/floral-blouse.png"
+              />
+              <div class="collection-footer">
+                <span class="name">Floral Blouse</span>
+                <span class="price">20</span>
+              </div>
+              <button class="custom-button">Add to Card</button>
+            </div>
+            <div class="collection-item">
+              <img
+                class="image"
+                src="https://i.ibb.co/KV18Ysr/floral-skirt.png"
+              />
+              <div class="collection-footer">
+                <span class="name">Floral Dress</span>
+                <span class="price">80</span>
+              </div>
+              <button class="custom-button">Add to Cart</button>
+            </div>
+            <div class="collection-item">
+              <img
+                class="image"
+                src="https://i.ibb.co/N3BN1bh/red-polka-dot-dress.png"
+              />
+              <div class="collection-footer">
+                <span class="name">Red Dots Dress</span>
+                <span class="price">80</span>
+              </div>
+              <button class="custom-button">Add to Cart</button>
+            </div>
           </div>
         </div>
         <div class="collection-preview">
-          <h2 class="title">Mens</h2>  
+          <h2 class="title">Mens</h2>
           <div class="preview">
             <div class="collection-item">
               <img class="image" src="https://i.ibb.co/xJS0T3Y/camo-vest.png" />
@@ -184,29 +223,38 @@
               <button class="custom-button">Add to Cart</button>
             </div>
             <div class="collection-item">
-             <img class="image" src="https://i.ibb.co/qMQ75QZ/floral-shirt.png" />
-             <div class="collection-footer">
-               <span class="name">Floral T-shirt</span>
-               <span class="price">20</span>
-             </div>
-             <button class="custom-button">Add to Card</button>
-           </div>
-           <div class="collection-item">
-             <img class="image" src="https://i.ibb.co/55z32tw/long-sleeve.png" />
-             <div class="collection-footer">
-               <span class="name">Black & White Longsleeve</span>
-               <span class="price">25</span>
-             </div>
-             <button class="custom-button">Add to Cart</button>
-           </div>
-           <div class="collection-item">
-             <img class="image" src="https://i.ibb.co/RvwnBL8/pink-shirt.png" />
-             <div class="collection-footer">
-               <span class="name">Pink T-shirt </span>
-               <span class="price">25</span>
-             </div>
-             <button class="custom-button">Add to Cart</button>
-           </div>
+              <img
+                class="image"
+                src="https://i.ibb.co/qMQ75QZ/floral-shirt.png"
+              />
+              <div class="collection-footer">
+                <span class="name">Floral T-shirt</span>
+                <span class="price">20</span>
+              </div>
+              <button class="custom-button">Add to Card</button>
+            </div>
+            <div class="collection-item">
+              <img
+                class="image"
+                src="https://i.ibb.co/55z32tw/long-sleeve.png"
+              />
+              <div class="collection-footer">
+                <span class="name">Black & White Longsleeve</span>
+                <span class="price">25</span>
+              </div>
+              <button class="custom-button">Add to Cart</button>
+            </div>
+            <div class="collection-item">
+              <img
+                class="image"
+                src="https://i.ibb.co/RvwnBL8/pink-shirt.png"
+              />
+              <div class="collection-footer">
+                <span class="name">Pink T-shirt </span>
+                <span class="price">25</span>
+              </div>
+              <button class="custom-button">Add to Cart</button>
+            </div>
           </div>
         </div>
       </div>
