--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="container">
       <ul>
         <li>
-          <a href="../w11-assignment/index.html">W11: SHOP</a>
+          <a href="../w11-assignment/index2.html">W11: SHOP</a>
         </li>
         <li></li>
       </ul>
